# elixir_bls

./: .gitignore  .gitmodules  LICENSE  README.md  bls_c.wasm  mix.exs
.circleci/: config.yml
config/: config.exs
lib/: bls.ex
lib/bls/: bls.ex  keys.ex  signature.ex
native/bls/: Cargo.toml  README.md
native/bls/amcl/src/bls381/: big.rs
native/bls/src/: aggregates.rs  g2.rs  keys.rs  lib.rs  signature.rs
test/: bls_test.exs
