[package]
name = "bls"
description = "Various signature schemes. BLS, MuSig wrapped for Elixir module"
version = "0.1.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>", "Tim Jester-Pfadt <t.jp@gmx.de>"]
license = "MIT/Apache-2.0"

[lib]
name = "bls"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
amcl = { path = "./amcl" }
rustler = "0.20.0"
rustler_codegen = "0.20.0"
lazy_static = "1.0"
criterion = "0.2"
hex = "0.3"
rand = "0.5"
tiny-keccak = "1.4"
yaml-rust = "0.4"